@@ -568,6 +568,7 @@ DRAW_CALLIN(GroundPostDeferred)
 DRAW_CALLIN(UnitsPostDeferred)
 DRAW_CALLIN(FeaturesPostDeferred)
 DRAW_CALLIN(ScreenEffects)
+DRAW_CALLIN(ScreenFinal)
 DRAW_CALLIN(Screen)
 DRAW_CALLIN(InMiniMap)
 DRAW_CALLIN(InMiniMapBackground)
