@@ -134,6 +134,7 @@
 	SETUP_EVENT(DrawUnitsPostDeferred,    MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawFeaturesPostDeferred, MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawScreenEffects,        MANAGED_BIT | UNSYNCED_BIT)
+	SETUP_EVENT(DrawScreenFinal,          MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawScreen,               MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawInMiniMap,            MANAGED_BIT | UNSYNCED_BIT)
 	SETUP_EVENT(DrawInMiniMapBackground,  MANAGED_BIT | UNSYNCED_BIT)
